// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderComponent /> component Render property - with avatar 1`] = `
<Header>
  <Row
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <Col>
      <Text
        className="logo"
      >
        THE MOVIE DB
      </Text>
    </Col>
    <Col>
      <div
        className="profile"
      >
        <figure
          className="profile__avatar"
        >
          <img
            alt="name"
            className="profile__avatar-img"
            src="https://www.gravatar.com/avatar/gravatar_hash.jpg"
          />
        </figure>
        <Dropdown
          className="profile__dropdown"
          mouseEnterDelay={0.15}
          mouseLeaveDelay={0.1}
          overlay={<Connect(DropdownMenuComponent) />}
          placement="bottomLeft"
        >
          <Text>
            username
            <Icon
              type="caret-down"
            />
          </Text>
        </Dropdown>
      </div>
    </Col>
  </Row>
</Header>
`;

exports[`<HeaderComponent /> component Render property - without avatar 1`] = `
<Header>
  <Row
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <Col>
      <Text
        className="logo"
      >
        THE MOVIE DB
      </Text>
    </Col>
    <Col>
      <div
        className="profile"
      >
        <figure
          className="profile__avatar"
        >
          <Avatar
            icon="user"
            shape="circle"
            size="default"
          />
        </figure>
        <Dropdown
          className="profile__dropdown"
          mouseEnterDelay={0.15}
          mouseLeaveDelay={0.1}
          overlay={<Connect(DropdownMenuComponent) />}
          placement="bottomLeft"
        >
          <Text>
            username
            <Icon
              type="caret-down"
            />
          </Text>
        </Dropdown>
      </div>
    </Col>
  </Row>
</Header>
`;
